# libkolibre-player

./: AUTHORS  Makefile.am  README  README.md  configure.ac  doxygen.cfg  doxygen.cfg.in  libkolibre-player.pc.in
src/: Makefile.am  Player.cpp  Player.h  PlayerImpl.cpp  PlayerImpl.h  PlayerPosition.cpp  PlayerPosition.h  PlayerState.h  SmilTime.h
tests/: Makefile.am  codectest.cpp  codectest.sh  codectest_mp3.sh  codectest_ogg.sh  codectest_wav.sh  data.h  player_signal_test.cpp  seek_on_continue.cpp  seek_on_continue_data.cpp  seektest.cpp  seektest.sh  seektest_mp3.sh  seektest_ogg.sh  seektest_wav.sh  setup_logging.h  tempopitchtest.cpp  tempopitchtest.sh  tempopitchtest_mp3.sh  tempopitchtest_ogg.sh  tempopitchtest_wav.sh
tests/scripts/: maketestdata.sh  maketestfile.php
